--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Huawei MatePad 12 X - Ultimate Performance</title>
+    <title>Huawei MatePad 12 X - Redefining Tablet Technology</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,81 +12,112 @@
             <h1>Huawei MatePad 12 X</h1>
             <nav>
                 <ul>
-                    <li><a href="#features">Features</a></li>
+                    <li><a href="#highlights">Highlights</a></li>
+                    <li><a href="#key-features">Key Features</a></li>
                     <li><a href="#specs">Specifications</a></li>
-                    <li><a href="#buy">Buy Now</a></li>
+                    <li><a href="#learn">Learn More</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
+    <!-- Attention Section -->
     <section class="intro">
         <div class="intro-content">
-            <h2>Experience the Ultimate Power with the Huawei MatePad 12 X!</h2>
-            <p>Transform the way you work, create, and entertain with the Huawei MatePad 12 X. Packed with cutting-edge technology, this tablet takes your experience to the next level with exceptional performance and stunning visuals.</p>
+            <h2>Revolutionize Your Digital Experience with the Huawei MatePad 12 X</h2>
+            <p>Be amazed by the power, elegance, and innovation packed into a sleek 12-inch tablet. With unparalleled performance and a vibrant display, this is the device you’ve been waiting for.</p>
             <img src="huawei.jpg" alt="Huawei MatePad 12 X" class="intro-image">
         </div>
     </section>
 
-    <section id="features" class="section">
-        <h2>Features You’ll Love</h2>
-        <p>Unmatched performance and style meet to create the perfect device for entertainment, productivity, and creativity.</p>
+    <!-- Highlights Section -->
+    <section id="highlights" class="section">
+        <h2>Highlights</h2>
+        <p>Unleash your creativity, enhance productivity, and redefine entertainment with cutting-edge features:</p>
         <ul>
-            <li>12-inch ultra-responsive IPS TFT display with a 144 Hz refresh rate</li>
-            <li>Powered by the Kirin T90A chipset with octa-core CPU for seamless multitasking</li>
-            <li>Impressive 13 MP + 8 MP rear cameras with 4K video recording capability</li>
-            <li>Long-lasting 10,100 mAh battery with 66W SuperCharge</li>
-            <li>HarmonyOS 4.2 for enhanced user experience</li>
+            <li>Immersive 12-inch IPS TFT display with a 144 Hz refresh rate for a smooth visual experience</li>
+            <li>Powered by the advanced Kirin T90A chipset for exceptional multitasking performance</li>
+            <li>Versatile 13 MP + 8 MP rear cameras with 4K video recording capabilities</li>
+            <li>Massive 10,100 mAh battery that supports 66W SuperCharge for uninterrupted use</li>
+            <li>HarmonyOS 4.2 offering an intuitive, seamless interface</li>
         </ul>
     </section>
 
-    <section id="specs" class="section">
-        <h2>Specifications</h2>
-        <table>
-            <tr>
-                <td>Display</td>
-                <td>12 inches IPS TFT, 2800 x 1840 pixels, 1000 nits (peak), 144 Hz refresh rate, 86.3% screen-to-body ratio</td>
-            </tr>
-            <tr>
-                <td>Dimensions & Weight</td>
-                <td>270 x 183 x 5.9 mm, 555 g</td>
-            </tr>
-            <tr>
-                <td>Battery</td>
-                <td>10,100 mAh, 66W SuperCharge (50% in 30 minutes), Up to 14 hours of video playback</td>
-            </tr>
-            <tr>
-                <td>Processor</td>
-                <td>Kirin T90A, Octa-core CPU</td>
-            </tr>
-            <tr>
-                <td>Memory</td>
-                <td>8 GB or 12 GB RAM, 256 GB storage (no expandable storage)</td>
-            </tr>
-            <tr>
-                <td>Rear Cameras</td>
-                <td>13 MP (f/1.8) with LED flash, 8 MP ultra-wide (f/2.2), 4K video recording (30fps)</td>
-            </tr>
-            <tr>
-                <td>Front Camera</td>
-                <td>8 MP (f/2.2), 1080p video recording (30fps)</td>
-            </tr>
-            <tr>
-                <td>Operating System</td>
-                <td>HarmonyOS 4.2</td>
-            </tr>
-            <tr>
-                <td>Connectivity</td>
-                <td>Bluetooth 5.2, Wi-Fi (2.4 GHz & 5 GHz), USB Type-C, USB 3.1 Gen 1</td>
-            </tr>
-        </table>
+    <section id="key-features" class="section">
+        <h2>Key Features</h2>
+        <p>Discover the exceptional highlights of the Huawei MatePad 12 X:</p>
+        <div class="key-features-grid">
+            <div class="feature-item">
+                <img src="1.png" alt="PC-level Productivity" class="feature-image">
+            </div>
+            <div class="feature-item">
+                <img src="2.png" alt="Exclusive PC-level WPS" class="feature-image">
+            </div>
+            <div class="feature-item">
+                <img src="3.png" alt="12-inch PaperMatte Display" class="feature-image">
+            </div>
+            <div class="feature-item">
+                <img src="4.png" alt="Ultra-long Battery Life" class="feature-image">
+            </div>
+            <div class="feature-item">
+                <img src="5.png" alt="Go Point APP, Creation Starts Here" class="feature-image">
+            </div>
+            <div class="feature-item">
+                <img src="6.png" alt="Innovative Luxury Material" class="feature-image">
+            </div>
+        </div>
     </section>
 
-    <section id="buy" class="section">
-        <h2>Ready to Buy?</h2>
-        <p>Don't miss out on the power of the Huawei MatePad 12 X. Click the button below to visit the Huawei official product page and learn more.</p>
-        <div class="buy-button-container">
-            <a href="https://consumer.huawei.com/my/tablets/matepad-12-x/" class="buy-button">Visit Huawei Official Product Page</a>
+    <!-- Specifications Section -->
+    <section id="specs" class="section">
+        <h2>Specifications</h2>
+        <p>Explore the exceptional features of the Huawei MatePad 12 X:</p>
+        <div class="specs-grid">
+            <div class="spec-item">
+                <h3>Display</h3>
+                <p>12 inches IPS TFT, 2800 x 1840 pixels, 1000 nits peak brightness, 144 Hz refresh rate</p>
+            </div>
+            <div class="spec-item">
+                <h3>Dimensions & Weight</h3>
+                <p>270 x 183 x 5.9 mm, 555 g</p>
+            </div>
+            <div class="spec-item">
+                <h3>Battery</h3>
+                <p>10,100 mAh, 66W SuperCharge (50% in 30 mins), Up to 14 hours video playback</p>
+            </div>
+            <div class="spec-item">
+                <h3>Processor</h3>
+                <p>Kirin T90A, Octa-core CPU</p>
+            </div>
+            <div class="spec-item">
+                <h3>Memory</h3>
+                <p>8 GB or 12 GB RAM, 256 GB storage</p>
+            </div>
+            <div class="spec-item">
+                <h3>Rear Cameras</h3>
+                <p>13 MP (f/1.8) with LED flash, 8 MP ultra-wide (f/2.2), 4K video recording (30fps)</p>
+            </div>
+            <div class="spec-item">
+                <h3>Front Camera</h3>
+                <p>8 MP (f/2.2), 1080p video recording (30fps)</p>
+            </div>
+            <div class="spec-item">
+                <h3>Operating System</h3>
+                <p>HarmonyOS 4.2</p>
+            </div>
+            <div class="spec-item">
+                <h3>Connectivity</h3>
+                <p>Bluetooth 5.2, Wi-Fi (2.4 GHz & 5 GHz), USB Type-C, USB 3.1 Gen 1</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Action Section -->
+    <section id="learn" class="section">
+        <h2>Learn More</h2>
+        <p>Don’t miss out on the chance to elevate your digital experience! Visit the website today to learn more about the HUAWEI MatePad 12 X and take advantage of exclusive offers. Experience the future of productivity—order yours now!</p>
+        <div class="learn-button-container">
+            <a href="https://consumer.huawei.com/my/tablets/matepad-12-x/" class="learn-button">Visit Huawei Official Product Page</a>
         </div>
     </section>
 
